--- a/style.css
+++ b/style.css
@@ -47,8 +47,7 @@ nav a {
 
 .header {
   height: 320px;
-  background-image: url("https://s3.amazonaws.com/codecademy-content/courses/web-101/unit-6/htmlcss1-img_burgerphoto.jpeg");
-  background-position: center;
+  background: url("https://s3.amazonaws.com/codecademy-content/courses/web-101/unit-6/htmlcss1-img_burgerphoto.jpeg") center;
   background-size: cover;
   padding: 0;
 }
